--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -18,9 +18,10 @@
   "license": "MIT",
   "main": "src",
   "scripts": {
-    "lint": "eslint src test/index.js",
+    "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
     "release": "../../bin/release.sh eslint-config",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
     "!(test/fixtures/**/*)*.js": [
@@ -32,9 +33,6 @@
     "yarn.lock": [
       "yarn-deduplicate"
     ]
-  },
-  "jest": {
-    "testRegex": "test/index.js"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
@@ -51,9 +49,7 @@
   "devDependencies": {
     "eslint": "^8.35.0",
     "jest": "^29.5.0",
-    "should": "13.2.3",
-    "sort-package-json": "^2.4.0",
-    "yarn-deduplicate": "^6.0.1"
+    "should": "13.2.3"
   },
   "peerDependencies": {
     "eslint": "8"
