--- a/packages/eslint-config-typescript-react/package.json
+++ b/packages/eslint-config-typescript-react/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@untile/eslint-config-react",
+  "name": "@untile/eslint-config-typescript-react",
   "version": "0.0.0",
-  "description": "Untile-flavored ESLint config react",
+  "description": "Untile-flavored ESLint config typescript react",
   "keywords": [
     "config",
     "eslint",
     "lint",
     "react",
-    "react-hooks"
+    "typescript"
   ],
-  "homepage": "https://github.com/untile/js-configs/packages/eslint-config-react/#readme",
+  "homepage": "https://github.com/untile/js-configs/packages/eslint-config-typescript-react/#readme",
   "bugs": {
     "url": "https://github.com/untile/js-configs/issues"
   },
@@ -26,7 +26,7 @@
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.js": [
+    "!(test/fixtures/**/*)*.(ts|js)": [
       "eslint"
     ],
     "package.json": [
@@ -37,20 +37,23 @@
     ]
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-react": "^7.18.6",
-    "@untile/eslint-config": "*",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-class-members": "^1.16.0"
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "@untile/eslint-config-react": "*",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "eslint": "^8.35.0",
     "jest": "^29.5.0",
-    "react": "^17.0.2"
+    "node-notifier": "^10.0.1",
+    "react": "^17.0.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "eslint": "8"
+    "eslint": "8",
+    "typescript": "4"
   },
   "engines": {
     "node": ">=14.18"
