--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "release:eslint-config-react": "yarn workspace @untile/eslint-config-react release",
     "release:eslint-config-typescript-react": "yarn workspace @untile/eslint-config-typescript-react release",
     "release:stylelint-config-react": "yarn workspace @untile/stylelint-config-react release",
+    "release:typescript-eslint-config-react-native": "yarn workspace @untile/eslint-config-typescript-react-native release",
     "test": "yarn workspaces run test"
   },
   "lint-staged": {
