--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "release:eslint-config": "yarn workspace @untile/eslint-config release",
     "release:eslint-config-react": "yarn workspace @untile/eslint-config-react release",
     "release:eslint-config-typescript-react": "yarn workspace @untile/eslint-config-typescript-react release",
+    "release:prettier-config": "yarn workspace @untile/prettier-config release",
     "release:stylelint-config-react": "yarn workspace @untile/stylelint-config-react release",
     "release:typescript-eslint-config-react-native": "yarn workspace @untile/eslint-config-typescript-react-native release",
     "test": "yarn workspaces run test"
