--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "@untile/eslint-config-react",
+  "name": "@untile/prettier-config",
   "version": "0.0.0",
-  "description": "Untile-flavored ESLint config react",
+  "description": "Untile-flavored Prettier config",
   "keywords": [
     "config",
-    "eslint",
-    "lint",
-    "react",
-    "react-hooks"
+    "prettier",
+    "lint"
   ],
-  "homepage": "https://github.com/untile/js-configs/packages/eslint-config-react/#readme",
+  "homepage": "https://github.com/untile/js-configs/packages/prettier-config/#readme",
   "bugs": {
     "url": "https://github.com/untile/js-configs/issues"
   },
@@ -21,7 +19,7 @@
   "main": "src",
   "scripts": {
     "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
-    "release": "../../bin/release.sh eslint-config",
+    "release": "../../bin/release.sh prettier-config",
     "test": "jest",
     "test:watch": "jest --watch --notify"
   },
@@ -36,22 +34,16 @@
       "yarn-deduplicate"
     ]
   },
-  "dependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/preset-react": "^7.18.6",
-    "@untile/eslint-config": "*",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-class-members": "^1.16.0"
-  },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/parser": "^7.21.3",
+    "@untile/eslint-config-react": "*",
     "eslint": "^8.35.0",
     "jest": "^29.5.0",
+    "prettier": "^2.8.7",
     "react": "^17.0.2"
   },
   "peerDependencies": {
-    "eslint": "8",
     "prettier": "2.8"
   },
   "engines": {
