--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Get package and version name
         uses: jungwinter/split@v2
         id: split
-        with: 
+        with:
           msg: ${{steps.tag_name.outputs.current_version}}
           separator: '/'
 
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14.18.0'
-          registry-url: https://registry.npmjs.org/
+          registry-url: https://registry.npmjs.com
 
       - name: Install module dependencies
         run: yarn bootstrap:${{ steps.split.outputs._0 }}
