--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -43,7 +43,7 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/lint": "^17.4.4",
     "@commitlint/load": "^17.4.4",
-    "@untile/eslint-config": "*",
+    "@untile/eslint-config": "^1.0.0",
     "eslint": "^8.35.0",
     "jest": "^29.5.0"
   },
