--- a/packages/stylelint-config-react/package.json
+++ b/packages/stylelint-config-react/package.json
@@ -9,7 +9,7 @@
     "stylelint",
     "untile"
   ],
-  "homepage": "https://github.com/untile/js-configs/packages/stylelint-config-react/#readme",
+  "homepage": "https://github.com/untile/js-configs/tree/master/packages/stylelint-config-react#readme",
   "bugs": {
     "url": "https://github.com/untile/js-configs/issues"
   },
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
-    "@untile/eslint-config": "*",
+    "@untile/eslint-config": "^1.0.0",
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.35.0",
