--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
-    "@untile/eslint-config": "*",
+    "@untile/eslint-config": "^1.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
