--- a/packages/eslint-config-typescript-react-native/package.json
+++ b/packages/eslint-config-typescript-react-native/package.json
@@ -41,15 +41,15 @@
     "eslint-plugin-react-native": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.35.0",
+    "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "react": "^17.0.2",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "eslint": "8",
-    "typescript": "4"
+    "typescript": ">=4.9.0 || >=5.0.0"
   },
   "engines": {
     "node": ">=14.18"
