--- a/packages/eslint-config-typescript-react/package.json
+++ b/packages/eslint-config-typescript-react/package.json
@@ -37,23 +37,23 @@
     ]
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "@untile/eslint-config-react": "*",
-    "eslint-plugin-typescript-sort-keys": "^2.1.0"
+    "eslint-plugin-typescript-sort-keys": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "node-notifier": "^10.0.1",
     "react": "^17.0.2",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "eslint": "8",
-    "typescript": "4"
+    "typescript": ">=4.9.0 || >=5.0.0"
   },
   "engines": {
     "node": ">=14.18"
