--- a/packages/stylelint-config-react-native/package.json
+++ b/packages/stylelint-config-react-native/package.json
@@ -44,7 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
-    "@untile/eslint-config": "*",
+    "@untile/eslint-config": "^1.0.3",
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.38.0",
