--- a/packages/stylelint-config-react/package.json
+++ b/packages/stylelint-config-react/package.json
@@ -42,10 +42,7 @@
     "moment": "^2.29.4"
   },
   "dependencies": {
-    "@stylelint/postcss-css-in-js": "^0.38.0",
-    "postcss": "^8.4.21",
-    "postcss-syntax": "^0.36.2",
-    "stylelint-config-recommended": "^10.0.1",
+    "stylelint-config-recommended": "^11.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^6.0.3"
   },
@@ -57,10 +54,14 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.38.0",
     "jest": "^29.4.1",
+    "postcss": "^8.4.21",
+    "postcss-styled-syntax": "^0.4.0",
     "stylelint": "^15.4.0"
   },
   "peerDependencies": {
-    "stylelint": "15"
+    "postcss": "^8.4.21",
+    "postcss-styled-syntax": "^0.4.0",
+    "stylelint": ">=15.3"
   },
   "engines": {
     "node": ">=14.18"
