--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -20,8 +20,7 @@
   "scripts": {
     "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
     "release": "../../bin/release.sh @untile/prettier-config",
-    "test": "jest",
-    "test:watch": "jest --watch --notify"
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "lint-staged": {
     "!(test/fixtures/**/*)*.js": [
@@ -40,11 +39,11 @@
     "@untile/eslint-config": "^1.0.3",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "react": "^18.2.0"
   },
   "peerDependencies": {
-    "prettier": "2.8"
+    "prettier": "3"
   },
   "engines": {
     "node": ">=16"
