Remove tests in commitlint

--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "lint": "eslint .",
     "release": "../../bin/release.sh @untile/commitlint-config",
-    "test": "jest",
+    "test": "true",
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
