--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,12 +16,12 @@
     "url": "git+https://github.com/untile/js-configs.git"
   },
   "license": "MIT",
+  "type": "module",
   "main": "src",
   "scripts": {
     "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
     "release": "../../bin/release.sh @untile/eslint-config",
-    "test": "jest",
-    "test:watch": "jest --watch --notify"
+    "test": "vitest run"
   },
   "lint-staged": {
     "!(test/fixtures/**/*)*.js": [
@@ -32,26 +32,25 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/eslint-parser": "^7.22.9",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-new-with-error": "^4.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "eslint-plugin-sort-imports-es6": "^0.0.3",
+    "eslint-plugin-new-with-error": "^5.0.0",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "eslint-plugin-sql-template": "^2.0.0",
-    "eslint-plugin-switch-case": "^1.1.2"
+    "eslint-plugin-switch-case": "^3.0.1",
+    "eslint-plugin-vitest": "^0.5.4"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "should": "13.2.3"
+    "@eslint/compat": "^1.1.1",
+    "@stylistic/eslint-plugin": "^2.6.2",
+    "eslint": "^9.9.0",
+    "eslint-plugin-n": "^17.10.2",
+    "should": "13.2.3",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
-    "eslint": "8"
+    "eslint": "9.0.0"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   }
 }
