--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,15 +20,15 @@ jobs:
         id: split
         with:
           msg: ${{steps.tag_name.outputs.current_version}}
-          separator: '/'
+          separator: "/"
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '14.18.0'
+          node-version: 20
           registry-url: https://registry.npmjs.com
 
       - name: Publish
