--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,29 +6,32 @@ on:
       - master
 
 jobs:
-  build:
+  test:
     timeout-minutes: 20
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      - name: Enable yarn
+        run: corepack enable
+
       - name: Setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16.16.0'
+          node-version: 20
 
       - name: Setup module dependencies cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: Install module dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn --immutable
 
       - name: Lint
         run: yarn lint
