--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -33,24 +33,25 @@
     ]
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
+    "@eslint/js": "^9.20.0",
     "@untile/eslint-config": "^2.0.1",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-perfectionist": "^4.8.0",
     "eslint-plugin-sort-class-members": "^1.18.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-typescript-sort-keys": "^2.3.0"
+    "eslint-plugin-typescript-sort-keys": "^2.3.0",
+    "typescript-eslint": "^8.23.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
-    "eslint": "^8.46.0",
+    "eslint": "^9.13.0",
     "jest": "^29.6.1",
     "node-notifier": "^10.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "eslint": "8",
+    "eslint": "9",
     "prettier": "3",
     "typescript": ">=4.9.0 || >=5.0.0"
   },
