--- a/packages/commitlint-config/package.json
+++ b/packages/commitlint-config/package.json
@@ -21,16 +21,12 @@
   "scripts": {
     "lint": "eslint .",
     "release": "../../bin/release.sh @untile/commitlint-config",
-    "test": "true",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --runInBand",
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "*.js": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "*.js": "eslint",
+    "package.json": "sort-package-json"
   },
   "resolutions": {
     "decode-uri-component": "^0.2.1",
@@ -38,16 +34,17 @@
     "moment": "^2.29.4"
   },
   "dependencies": {
-    "@commitlint/config-conventional": "^17.6.7",
-    "commitlint-plugin-function-rules": "^2.0.2"
+    "@commitlint/config-conventional": "^19.7.1",
+    "commitlint-plugin-function-rules": "^4.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.7",
-    "@commitlint/lint": "^17.6.7",
-    "@commitlint/load": "^17.6.7",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/lint": "^19.7.1",
+    "@commitlint/load": "^19.6.1",
     "@untile/eslint-config": "^2.0.1",
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1"
+    "cross-env": "^7.0.3",
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0"
   },
   "peerDependencies": {
     "@commitlint/cli": "^17.6.7"
