--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -26,30 +26,23 @@
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.js": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.js": "eslint",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
     "@untile/eslint-config": "^2.0.1",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-class-members": "^1.18.0"
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "react": "^18.2.0"
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "react": "^19.0.0"
   },
   "peerDependencies": {
-    "eslint": "8",
-    "prettier": "3"
+    "eslint": "9"
   },
   "engines": {
     "node": ">=20"
