--- a/packages/eslint-config-typescript-react-native/package.json
+++ b/packages/eslint-config-typescript-react-native/package.json
@@ -20,32 +20,31 @@
   "license": "MIT",
   "main": "src",
   "scripts": {
-    "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
+    "lint": "eslint . --ignore-pattern 'test/fixtures/*' --config src/index.js",
     "release": "../../bin/release.sh @untile/eslint-config-typescript-react-native",
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --runInBand",
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.tsx": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "package.json": "sort-package-json"
   },
   "dependencies": {
     "@untile/eslint-config-typescript-react": "^2.0.1",
-    "eslint-plugin-react-native": "^4.0.0"
+    "eslint-plugin-react-native": "^5.0.0",
+    "typescript-eslint": "^8.24.1"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "react": "^18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.4"
+    "@eslint/compat": "^1.2.6",
+    "@types/jest": "^29.5.14",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "react": "^19.0.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "eslint": "8",
+    "eslint": "9",
     "typescript": ">=4.9.0 || >=5.0.0"
   },
   "engines": {
