--- a/packages/eslint-config-typescript-react/package.json
+++ b/packages/eslint-config-typescript-react/package.json
@@ -22,33 +22,28 @@
   "scripts": {
     "lint": "eslint .",
     "release": "../../bin/release.sh @untile/eslint-config-typescript-react",
-    "test": "true"
+    "test": "jest",
+    "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "*.(ts|js)": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.(ts|js)": "eslint",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
     "@untile/eslint-config-react": "^2.0.1",
-    "@untile/eslint-config-typescript": "^2.0.1"
+    "@untile/eslint-config-typescript": "^2.0.1",
+    "eslint-config-prettier": "^10.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "node-notifier": "^10.0.1",
-    "react": "^18.2.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.4"
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "react": "^19.0.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "eslint": "8",
+    "eslint": "9",
     "typescript": ">=4.9.0 || >=5.0.0"
   },
   "engines": {
