--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -25,33 +25,23 @@
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.(ts|js)": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.(ts|js)": "eslint",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
     "@untile/eslint-config": "^2.0.1",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-sort-class-members": "^1.18.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-typescript-sort-keys": "^2.3.0"
+    "eslint-plugin-perfectionist": "^4.9.0",
+    "typescript-eslint": "^8.24.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "node-notifier": "^10.0.1",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.0.4"
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   },
   "peerDependencies": {
-    "eslint": "8",
-    "prettier": "3",
+    "eslint": "9",
     "typescript": ">=4.9.0 || >=5.0.0"
   },
   "engines": {
