--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,40 +16,37 @@
     "url": "git+https://github.com/untile/js-configs.git"
   },
   "license": "MIT",
-  "main": "src",
+  "main": "src/index.js",
   "scripts": {
-    "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
+    "lint": "eslint . --ignore-pattern 'test/fixtures/*' --config src/index.js",
     "release": "../../bin/release.sh @untile/eslint-config",
     "test": "jest",
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.js": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.js": "eslint",
+    "package.json": "sort-package-json"
   },
   "dependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/eslint-parser": "^7.22.9",
-    "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-new-with-error": "^4.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
-    "eslint-plugin-sort-imports-es6": "^0.0.3",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "eslint-plugin-sql-template": "^2.0.0",
-    "eslint-plugin-switch-case": "^1.1.2"
+    "@babel/core": "^7.26.9",
+    "@babel/eslint-parser": "^7.26.8",
+    "@youre/eslint-plugin-sort-imports-es6-autofix": "^0.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.15.1",
+    "eslint-plugin-new-with-error": "^5.0.0",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sort-class-members": "^1.21.0",
+    "eslint-plugin-sort-destructure-keys": "^2.0.0",
+    "eslint-plugin-switch-case": "^3.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "should": "13.2.3"
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0"
   },
   "peerDependencies": {
-    "eslint": "8"
+    "eslint": "9"
   },
   "engines": {
     "node": ">=20"
