--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -23,21 +23,14 @@
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.js": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.js": "eslint",
+    "package.json": "sort-package-json"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/parser": "^7.22.7",
-    "@untile/eslint-config": "^2.0.1",
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "prettier": "^3.0.0",
-    "react": "^18.2.0"
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.1",
+    "react": "^19.0.0"
   },
   "peerDependencies": {
     "prettier": "3"
