--- a/packages/stylelint-config-react/package.json
+++ b/packages/stylelint-config-react/package.json
@@ -22,16 +22,12 @@
   "scripts": {
     "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
     "release": "../../bin/release.sh @untile/stylelint-config-react",
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --runInBand",
     "test:watch": "jest --watch --notify"
   },
   "lint-staged": {
-    "!(test/fixtures/**/*)*.js": [
-      "eslint"
-    ],
-    "package.json": [
-      "sort-package-json"
-    ]
+    "!(test/fixtures/**/*)*.js": "eslint",
+    "package.json": "sort-package-json"
   },
   "resolutions": {
     "json5": "^2.2.1",
@@ -39,26 +35,22 @@
     "moment": "^2.29.4"
   },
   "dependencies": {
-    "stylelint-config-recommended": "^13.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-order": "^6.0.3"
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-order": "^6.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
     "@untile/eslint-config": "^2.0.1",
-    "babel-jest": "^29.6.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.46.0",
-    "jest": "^29.6.1",
-    "postcss": "^8.4.26",
-    "postcss-styled-syntax": "^0.4.0",
-    "stylelint": "^15.10.2"
+    "cross-env": "^7.0.3",
+    "eslint": "^9.20.1",
+    "jest": "^29.7.0",
+    "postcss": "^8.5.2",
+    "postcss-styled-syntax": "^0.7.1",
+    "stylelint": "^16.14.1"
   },
   "peerDependencies": {
     "postcss": "^8.4",
-    "postcss-styled-syntax": "^0.4.0",
-    "stylelint": ">=15.10"
+    "postcss-styled-syntax": "^0.7.0",
+    "stylelint": ">=16.14"
   },
   "engines": {
     "node": ">=20"
