Add oxlint-config package

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -35,3 +35,7 @@ eslint-config-typescript-react:
 # Label for package eslint-config-typescript.
 eslint-config-typescript:
   - packages/eslint-config-typescript/**/*
+
+# Label for package oxlint-config.
+oxlint-config:
+  - packages/oxlint-config/**/*
