--- a/packages/eslint-config-typescript-react/package.json
+++ b/packages/eslint-config-typescript-react/package.json
@@ -44,7 +44,7 @@
   },
   "peerDependencies": {
     "eslint": "9",
-    "typescript": ">=4.9.0 || >=5.0.0"
+    "typescript": ">=5.0.0"
   },
   "engines": {
     "node": ">=20"
