--- a/packages/eslint-config-typescript/package.json
+++ b/packages/eslint-config-typescript/package.json
@@ -42,7 +42,7 @@
   },
   "peerDependencies": {
     "eslint": "9",
-    "typescript": ">=4.9.0 || >=5.0.0"
+    "typescript": ">=5.0.0"
   },
   "engines": {
     "node": ">=20"
