--- a/packages/eslint-config-typescript-react-native/package.json
+++ b/packages/eslint-config-typescript-react-native/package.json
@@ -40,6 +40,7 @@
     "eslint": "^9.20.1",
     "jest": "^29.7.0",
     "react": "^19.0.0",
+    "react-native": "^0.78.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
