--- a/package.json
+++ b/package.json
@@ -21,41 +21,38 @@
   ],
   "scripts": {
     "codegen:w3c-css-props": "node scripts/codegen-w3c-css-props.js",
-    "lint": "yarn workspaces foreach --since run lint",
-    "pre-commit": "yarn lint-staged",
+    "lint": "npm run lint --workspaces --if-present",
+    "pre-commit": "lint-staged",
     "prepare": "husky",
-    "release:biome-config": "yarn workspace @untile/biome-config run release",
-    "release:commitlint-config": "yarn workspace @untile/commitlint-config run release",
-    "release:eslint-config": "yarn workspace @untile/eslint-config run release",
-    "release:eslint-config-react": "yarn workspace @untile/eslint-config-react run release",
-    "release:eslint-config-typescript": "yarn workspace @untile/eslint-config-typescript run release",
-    "release:eslint-config-typescript-react": "yarn workspace @untile/eslint-config-typescript-react run release",
-    "release:eslint-config-typescript-react-native": "yarn workspace @untile/eslint-config-typescript-react-native run release",
-    "release:prettier-config": "yarn workspace @untile/prettier-config run release",
-    "release:stylelint-config-react": "yarn workspace @untile/stylelint-config-react run release",
-    "release:stylelint-config-react-native": "yarn workspace @untile/stylelint-config-react-native run release",
-    "test": "yarn workspaces foreach --since run test"
+    "release:biome-config": "npm run release --workspace=@untile/biome-config",
+    "release:commitlint-config": "npm run release --workspace=@untile/commitlint-config",
+    "release:eslint-config": "npm run release --workspace=@untile/eslint-config",
+    "release:eslint-config-react": "npm run release --workspace=@untile/eslint-config-react",
+    "release:eslint-config-typescript": "npm run release --workspace=@untile/eslint-config-typescript",
+    "release:eslint-config-typescript-react": "npm run release --workspace=@untile/eslint-config-typescript-react",
+    "release:eslint-config-typescript-react-native": "npm run release --workspace=@untile/eslint-config-typescript-react-native",
+    "release:prettier-config": "npm run release --workspace=@untile/prettier-config",
+    "release:stylelint-config-react": "npm run release --workspace=@untile/stylelint-config-react",
+    "release:stylelint-config-react-native": "npm run release --workspace=@untile/stylelint-config-react-native",
+    "test": "npm run test --workspaces --if-present"
   },
   "lint-staged": {
     "package.json": [
       "sort-package-json"
     ]
   },
-  "resolutions": {
+  "overrides": {
     "json5": "^2.2.1"
   },
   "devDependencies": {
     "@untile/github-changelog-generator": "^3.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
-    "sort-package-json": "^3.0.0",
-    "yarn-deduplicate": "^6.0.2"
+    "sort-package-json": "^3.0.0"
   },
-  "packageManager": "yarn@4.5.0",
   "engines": {
     "node": ">=20",
-    "npm": "please-use-yarn",
-    "yarn": ">=4.5.0"
+    "npm": ">=10.0.0"
   },
   "validate-branch-name": {
     "pattern": "^master{1}$|^(bugfix|dependabot|enhancement|feature|hotfix|release|support)/.+$",
