--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -20,13 +20,14 @@
   "scripts": {
     "lint": "eslint . --ignore-pattern 'test/fixtures/*'",
     "release": "../../bin/release.sh @untile/prettier-config",
-    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest"
   },
   "lint-staged": {
     "!(test/fixtures/**/*)*.js": "eslint",
     "package.json": "sort-package-json"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^9.22.0",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
