--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "codegen:w3c-css-props": "node scripts/codegen-w3c-css-props.js",
     "lint": "npm run lint --workspaces --if-present",
-    "prepare": "lefthook install",
+    "prepare": "[ -z \"$CI\" ] && lefthook install || true",
     "release:biome-config": "npm run release --workspace=@untile/biome-config",
     "release:commitlint-config": "npm run release --workspace=@untile/commitlint-config",
     "release:eslint-config": "npm run release --workspace=@untile/eslint-config",
@@ -41,11 +41,11 @@
   "devDependencies": {
     "@untile/github-changelog-generator": "^3.0.0",
     "lefthook": "^2.0.0",
-    "sort-package-json": "^3.0.0",
+    "sort-package-json": "^3.4.0",
     "validate-branch-name": "^1.3.2"
   },
   "engines": {
-    "node": ">=20",
+    "node": ">=20.19.4",
     "npm": ">=10.0.0"
   },
   "validate-branch-name": {
