--- a/packages/biome-config/tsconfig.jest.json
+++ b/packages/biome-config/tsconfig.jest.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "commonjs"
+    "module": "commonjs",
+    "types": ["jest", "node"]
   }
 }
