--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "scripts": {
     "codegen:w3c-css-props": "node scripts/codegen-w3c-css-props.js",
     "lint": "npm run lint --workspaces --if-present",
-    "pre-commit": "lint-staged",
-    "prepare": "husky",
+    "prepare": "lefthook install",
     "release:biome-config": "npm run release --workspace=@untile/biome-config",
     "release:commitlint-config": "npm run release --workspace=@untile/commitlint-config",
     "release:eslint-config": "npm run release --workspace=@untile/eslint-config",
@@ -36,19 +35,14 @@
     "release:stylelint-config-react-native": "npm run release --workspace=@untile/stylelint-config-react-native",
     "test": "npm run test --workspaces --if-present"
   },
-  "lint-staged": {
-    "package.json": [
-      "sort-package-json"
-    ]
-  },
   "overrides": {
     "json5": "^2.2.1"
   },
   "devDependencies": {
     "@untile/github-changelog-generator": "^3.0.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.4.3",
-    "sort-package-json": "^3.0.0"
+    "lefthook": "^2.0.0",
+    "sort-package-json": "^3.0.0",
+    "validate-branch-name": "^1.3.2"
   },
   "engines": {
     "node": ">=20",
